--- a/seller_profile_styles.css
+++ b/seller_profile_styles.css
@@ -326,24 +326,26 @@ header h1 {
 
 nav {
     background-color: #666;
+    justify-content: center;
     text-align: center;
     padding: 10px 0;
 }
 
-nav ul {
+nav  {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 px;
+    padding: 1;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
+nav {
+    display: flex;
+    margin-bottom: 20px;
 }
 
-nav ul li a {
+nav a {
     text-decoration: none;
     color: #fff;
+    margin: 0 15px;
     font-weight: bold;
 }
 
